# UVG_Graficas_Lab_2

./: CMakeLists.txt  README.md  run.bat
src/: framebuffer.cpp  framebuffer.h  main.cpp  vertex2.h
